--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     
 </head>
 <body>
-   <div class="blueImg">
+   <div class="backImg">
    <div class="profile">
-   <img src="FB_IMG_1572282967039.JPG">
+   <img src="rey1.JPG">
    <div class="profileText">
        <h2>Reindolf laye</h2>
        <h3>reindolflaye@yahoo.com</h3>
